--- a/print.html
+++ b/print.html
@@ -155,6 +155,7 @@
                     <main>
                         <h1 id="chapter-1"><a class="header" href="#chapter-1">Chapter 1</a></h1>
 <p>hello!!!</p>
+<p><img src="images/my_photo.png" alt="myphoto" /></p>
 
                     </main>
 
