deploy: 89b783db51f85644fa6f3f5fa62814c5c7f295d8

--- a/print.html
+++ b/print.html
@@ -155,7 +155,7 @@
                     <main>
                         <h1 id="chapter-1"><a class="header" href="#chapter-1">Chapter 1</a></h1>
 <p>hello!!!</p>
-<p><img src="images/turkey.jpg" alt="myphoto" /></p>
+<p><img src="images/turkey1.jpg" alt="myphoto" /></p>
 
                     </main>
 
